--- a/index.html
+++ b/index.html
@@ -2,18 +2,101 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="CV of frontend developer.">
+  <title>CV</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./assets/favicon.ico">
+  <link rel="preload" href="./assets/fonts/Montserrat-Regular.woff2" type="font/woff2" as="font"
+    crossorigin="anonymous">
+  <link rel="preload" href="./assets/fonts/Montserrat-Medium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./assets/fonts/Montserrat-Bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./assets/fonts/Montserrat-Regular.woff" type="font/woff" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./assets/fonts/Montserrat-Medium.woff" type="font/woff" as="font" crossorigin="anonymous">
+  <link rel="preload" href="./assets/fonts/Montserrat-Bold.woff" type="font/woff" as="font" crossorigin="anonymous">
 </head>
 
 <body>
-    <img src="./avatar.jpg" alt="Photo">
-    <h1>CV Lyudmila Arutyunyants</h1>
-    <p><b>Date of birth:</b> <i>23.12.1985</i></p>
-    <p><b>Location:</b> <i>Saint-Petersburg</i></p>
+  <div class="wrapper">
 
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#contacts" class="nav__link">Contacts</a>
+            </li>
+            <li class="nav__item">
+              <a href="#summary" class="nav__link">Summary</a>
+            </li>
+            <li class="nav__item">
+              <a href="#skills" class="nav__link">Skills</a>
+            </li>
+            <li class="nav__item">
+              <a href="#code" class="nav__link">Code</a>
+            </li>
+            <li class="nav__item">
+              <a href="#projects" class="nav__link">Projects</a>
+            </li>
+            <li class="nav__item">
+              <a href="#education" class="nav__link">Education</a>
+            </li>
+            <li class="nav__item">
+              <a href="#languages" class="nav__link">Languages</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="main">
+      <section class="personal">
+        <div class="container">
+          <div class="personal__image">
+            <img class="personal__img" src="./assets/img/avatar.jpg" alt="Photo">
+          </div>
+          <div class="personal__content">
+            <h1>Lyudmila Arutyunyants</h1>
+            <h2>Frontend developer</h2>
+            <p><b>Date of birth:</b> <i>23.12.1985</i></p>
+            <p><b>Location:</b> <i>Saint-Petersburg</i></p>
+          </div>
+        </div>
+      </section>
+      <section class="contacts" id="contacts"></section>
+      <section class="summary" id="summary"></section>
+      <section class="skills" id="skills"></section>
+      <section class="code" id="code"></section>
+      <section class="projects" id="projects"></section>
+      <section class="education" id="education"></section>
+      <section class="languages" id="languages"></section>
+
+
+
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a href="https://github.com/MilaRut" class="footer__link">
+              <img class="footer__img" src="./assets/img/github-mark.svg" alt="Логотип GitHub.">
+              <span>GitHub</span>
+            </a>
+          </li>
+          <li class="footer__item">
+            <a href="https://rs.school/js/" class="footer__link">
+              <img class="footer__img" src="./assets/img/rs_school_js.svg" alt="Логотип RS School.">
+              <span>RS&nbsp;School</span>
+            </a>
+          </li>
+          <li class="footer__item">
+            <p class="footer__date">2022</p>
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
